# voxel-maxmsp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package-info.json
source/voxel/voxel.blob/: CMakeLists.txt
source/voxel/voxel.centroid/: jit.voxel.centroid.c  max.voxel.centroid.c  voxel.centroid.c
source/voxel/voxel.gaussian/: jit.voxel.gaussian.c  max.jit.voxel.gaussian.c
source/voxel/voxel.pcloud2grid/: jit.voxel.pcloud2grid.c  max.jit.voxel.pcloud2grid.c  max.voxel.pcloud2grid.c  voxel.pcloud2grid.c
source/voxel/voxel.vertexarray/: jit.voxel.vertexarray.c  max.jit.voxel.vertexarray.c
